tests/baselines/reference/iteratorSpreadInArray10.errors.txt
iteratorSpreadInArray10.ts(7,17): error TS2488: Type 'SymbolIterator' must have a '[Symbol.iterator]()' method that returns an iterator.


==== iteratorSpreadInArray10.ts (1 errors) ====
    class SymbolIterator {
        [Symbol.iterator]() {
            return this;
        }
    }
    
    var array = [...new SymbolIterator];
                    ~~~~~~~~~~~~~~~~~~
!!! error TS2488: Type 'SymbolIterator' must have a '[Symbol.iterator]()' method that returns an iterator.
!!! related TS2489 iteratorSpreadInArray10.ts:7:17: An iterator must have a 'next()' method.